...
      1000,
      500,
      200,
      100,
      50,
      20,
      10,
      5,
      2,
      1,
    ],
  ),

...
